--- a/typescript/public/index.html
+++ b/typescript/public/index.html
@@ -13,9 +13,10 @@
     <div id="root"></div>
   </body>
   <script type="text/javascript">
+    'use strict';
     // This variable points the frontend to the api.
     // It has to be the full url, including the last /api/v1 part and port.
     // You can change this if your api is not reachable on the same port as the frontend.
-    window.API_URL = 'http://localhost:8080'
+    window.API_URL = 'http://localhost:8080/api/v1';
   </script>
 </html>
